--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -55,7 +55,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: monthly-payslip-with-cdk
-        IMAGE_TAG: ${{ github.sha }}
+        IMAGE_TAG: ${{ github.sha:=latest}}
       run: |
         # Build a docker container and
         # push it to ECR so that it can
