--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -50,6 +50,11 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
+    - name : create a ecr
+      id: create-ecr
+      run: |
+        aws ecr create-repository --repository-name monthly-payslip-with-cdk --region us-east-2
+
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       env:
@@ -64,19 +69,3 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-
-#     - name: Fill in the new image ID in the Amazon ECS task definition
-#       id: task-def
-#       uses: aws-actions/amazon-ecs-render-task-definition@v1
-#       with:
-#         task-definition: task-definition.json
-#         container-name: monthly-payslip-program
-#         image: ${{ steps.build-image.outputs.image }}
-
-#     - name: Deploy Amazon ECS task definition
-#       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-#       with:
-#         task-definition: ${{ steps.task-def.outputs.task-definition }}
-#         service: monthly-payslip-program-service
-#         cluster: default
-#         wait-for-service-stability: true
