--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -54,7 +54,7 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: monthly-payslip-with-cdk
+        ECR_REPOSITORY: payslip-repository
         IMAGE_TAG: latest
       run: |
         # Build a docker container and
